add http to links

--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Six Miles Out</title>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
-  <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
+  <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <script src="../js/jquery.touchSwipe.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Gentium+Basic:400,700' rel='stylesheet' type='text/css'>
   <style>
@@ -21,11 +21,11 @@
   	width: 320px;
   }
   .chunk {
-    width: 320px;
+    /*width: 320px;*/
     background-color: #fafafa;
     position: aboslute;
     top: 0;
-    right: 0;
+    left: 0;
   }
   </style>
 </head>
