--- a/six-miles-out/sixmiles_files/index.html
+++ b/six-miles-out/sixmiles_files/index.html
@@ -19,9 +19,12 @@
   	margin-right: 15px;
   }
   img {
-  	width: 320px;
+  	width: 300px;
   }
   .chunk {
+    width: 320px;
+    margin-left: 10px;
+    margin-right: 10px;
     background-color: #fafafa;
     top: 0;
     left: 0;
