--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -20,8 +20,8 @@
   }
   p {
   	font-family: 'Gentium Basic', serif;
-  	margin-left: 15px;
-  	margin-right: 15px;
+  	padding-left: 15px;
+  	padding-right: 15px;
   }
 
   .chunk > img {
@@ -29,8 +29,6 @@
   }
   .chunk {
     width: 320px;
-    margin-left: 10px;
-    margin-right: 10px;
     background-color: #fafafa;
     position: absolute;
     top: 0;
@@ -42,11 +40,16 @@
     height: 40px;
     position: fixed;
     top: 6px;
+    left: 0;
   }
 
   p.nav-header {
-    font-size: 10pt;
+    font-size: 14pt;
     color: #fafafa;
+    float: left;
+    margin-top: 10px;
+    margin-left: 10px;
+
   }
   </style>
 </head>
