--- a/intropage/index.html
+++ b/intropage/index.html
@@ -79,7 +79,7 @@
           <li><a href="https://twitter.com/HaoyunSu">Haoyun Su</a></li>
           <li><a href="https://twitter.com/kkrebeccalai">KK Rebecca Lai</a></li>
           <li><a href="https://twitter.com/priyakkumar">Priya Krishnakumar</a></li>
-          <li><a href="https://twitter.com/komickiller">Tylor Whiting</a></li>
+          <li><a href="https://twitter.com/komickiller">Tyson Whiting</a></li>
         </ul>
         </div>
 
