--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -34,6 +34,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    overflow:scroll;
+    -webkit-overflow-scrolling:touch;
   }
 
   img.favicon {
@@ -50,7 +52,6 @@
     float: left;
     margin-top: 10px;
     margin-left: 10px;
-
   }
   </style>
 </head>
