--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -30,7 +30,7 @@
   }
   .chunk {
     width: 320px;
-    background-color: #fafafa;
+    background-color: #fff;
     position: absolute;
     top: 0;
     left: 0;
@@ -85,7 +85,7 @@
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk three" style="z-index: 130;">
-    <img src="sixmiles-royal.jpg"></img>
+    <img src="sixmilesv2-2.jpg"></img>
     <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
