--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -18,6 +18,8 @@
   body {
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
   p {
   	font-family: 'Gentium Basic', serif;
@@ -34,8 +36,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    overflow:scroll;
-    -webkit-overflow-scrolling:touch;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 
   img.favicon {
