--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -27,6 +27,11 @@
   	padding-right: 15px;
   }
 
+  img {
+    margin-bottom: 15px;
+    margin-top: 50px;
+  }
+
   .chunk > img {
   	width: 320px;
   }
@@ -53,6 +58,7 @@
     position: fixed;
     top: 6px;
     left: 0;
+    margin-top: 0px;
   }
 
   p.nav-header {
@@ -95,7 +101,7 @@
 	 <img src="original.jpg"></img>
   </div>
   <div class="chunk two" style="z-index: 140;">
-    <img src="sixmiles-pullquote.jpg"></img>
+    <img src="images/map.jpg"></img>
     <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
@@ -103,7 +109,7 @@
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk three" style="z-index: 130;">
-    <img src="sixmilesv3-1.jpg"></img>
+    <img src="images/kids.jpg"></img>
     <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
@@ -111,7 +117,7 @@
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk four" style="z-index: 120;">
-    <img src="sixmiles-1.jpg"></img>
+    <img src="images/video.jpg"></img>
     <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
@@ -119,7 +125,7 @@
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk five" style="z-index: 110;">
-    <img src="sixmilesv2-3.jpg"></img>
+    <img src="images/movingoff.jpg"></img>
     <p>Billy Barter, 76, was born on this island and he plans to die here.He and his wife, Bernadine, are affectionately referred to as the king and queen of Isle au Haut. They shake their heads at the titles and say, “not really,” but the label persists.</p>
     <p>The Barters have a long line of ancestry on the island. Pelatiah Barter settled on Isle au Haut around 1792 and was among the residents who petitioned the government of Massachusetts to hand ownership of the island over to the settlers in the early 1800s. </p>
     <p>More than two centuries later, Billy Barter is the patriarch of four generations of islanders. Most Barters are fishermen, and even the youngest, 13-year-old Michael, helps out. Billy Barter still fishes 330 lobster traps alongside his son and doesn’t plan to retire. He said the lobstering over the past 15 years has been the best he has seen around the island.</p>
