--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -23,8 +23,9 @@
   }
   p {
   	font-family: 'Gentium Basic', serif;
-  	padding-left: 15px;
-  	padding-right: 15px;
+  	padding-left: 25px;
+  	padding-right: 25px;
+    font-size: 1.3em;
   }
 
   img {
@@ -98,7 +99,7 @@
     </div>
   <!-- <div class="test"></div> -->
   <div class="chunk one" style="z-index: 150;">
-	 <img src="original.jpg"></img>
+	 <img src="images/cover.jpg"></img>
   </div>
   <div class="chunk two" style="z-index: 140;">
     <img src="images/map.jpg"></img>
