--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -145,7 +145,7 @@
     <p>“I don’t know if they’re going to stick around after I’m gone,” he said. </p>
   </div>
    <div class="chunk six" style="z-index: 100;">
-    <img src="sixmiles-3.jpg"></img>
+    <img src="images/map.jpg"></img>
     <p>Dianne Bowen is leaving Isle au Haut after spending the past 25 years here and raising a son on the island.</p>
 
     <p>She works at Black Dinah Chocolatiers, an 8-year-old business named after the peak it sits at the foot of. It’s one of the island’s largest employers, with one full-time and three part-time workers.  </p>
@@ -176,7 +176,7 @@
     <p>As far as her fellow islanders: “I’m going to miss them — well, most.”</p>
   </div>
    <div class="chunk seven" style="z-index: 90;">
-    <img src="sixmiles-4.jpg"></img>
+    <img src="images/kidsjpg"></img>
     <p>Island life can be trying on relationships. Here you are, on a small patch of land surrounded by water and by the same small group of people for the coldest, gloomiest months of the year.</p>
 
     <p>By the time March rolls around, people can be on edge.</p>
@@ -197,7 +197,7 @@
   </div>
 
     <div class="chunk eight" style="z-index: 80;">
-    <img src="sixmiles-5.jpg"></img>
+    <img src="images/movingoff.jpg"></img>
     <p>The only way off for most residents is the 40-minute ride to Stonington on the mail boat, which only leaves twice per day, except for Sunday when there is no mail. The only other way to get to and from the mainland is to have your own boat or a willing friend with one.</p>
 
     <p>Garrett Aldrich (left), captain and manager of The Mink, and deckhand Pat Haskell take a trip to Isle au Haut from Stonington. The Mink makes trips to the island twice daily.</p>
@@ -213,7 +213,7 @@
   </div>
 
   <div class="chunk nine" style="z-index: 70;">
-    <img src="sixmiles-6.jpg"></img>
+    <img src="images/map.jpg"></img>
     <p>To make a living on an island, you need to be flexible. Many residents make the bulk of their livelihood on the water, plucking fish, lobster and other sea life from the bay.</p>
 
     <p>Ed White is one of the island’s go-to mechanics and handles the inevitable breakdowns in its aging fleet of vehicles. He also does construction work for residents. He says he lived on a sailboat in the harbor for years — until the boat sank — and then moved into a house on the mainland. He spends a lot of his time in the library searching for obscure books, and residents say he’s probably one of the more well-read year-rounders.</p>
