fix viewport thing

--- a/kony/index.html
+++ b/kony/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kony 2012</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
     <link href='http://fonts.googleapis.com/css?family=Gentium+Basic:400,700' rel='stylesheet' type='text/css'>
