--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -182,7 +182,7 @@
     <p>As far as her fellow islanders: “I’m going to miss them — well, most.”</p>
   </div>
    <div class="chunk seven" style="z-index: 90;">
-    <img src="images/kidsjpg"></img>
+    <img src="images/kids.jpg"></img>
     <p>Island life can be trying on relationships. Here you are, on a small patch of land surrounded by water and by the same small group of people for the coldest, gloomiest months of the year.</p>
 
     <p>By the time March rolls around, people can be on edge.</p>
