--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -9,6 +9,7 @@
   <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <script src="//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Carrois+Gothic+SC' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Gilda+Display' rel='stylesheet' type='text/css'>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
@@ -59,11 +60,14 @@
     text-transform: uppercase;
   }
 
+  .navbar-inverse .navbar-brand {
+    color: #eaeaea;
+  }
+
   .navbar-brand {
     font-size: 14pt;
-    color: #fafafa;
-    font-family: 'Carrois Gothic SC', sans-serif;
-    /*vertical-align: bottom;*/
+    color: #f8f8f8;
+    font-family: 'Gilda Display', serif;
   }
   .test {
     width: 300px;
