KONY PART TWO WHOO

--- a/kony/index.html
+++ b/kony/index.html
@@ -26,6 +26,7 @@
     	height: 40px;
     	margin-bottom: 0px; 
     	margin-top: 5px;
+        margin-left: 10px;
     	float: left;
     }
 
@@ -36,10 +37,10 @@
 
     h3 {
     	font-family: "Sintony", sans-serif;
-    	margin-top: 3em;
+    	margin-top: 2.6em;
     	padding-left: 15px;
     	padding-right: 15px;
-        font-size: 1.8em;
+        font-size: 2.3em;
     }
     h4 {
         font-family: "Sintony", sans-serif;
@@ -53,14 +54,14 @@
         font-size: 1em;
     }
     .navbar-inverse {
-    	background-color: #ee3322;
-    	border: #ee3322;
+    	background-color: #ff0000;
+    	border: #ff0000;
     }
     .nav-header {
     	font-family: "Sintony", sans-serif;
     	color: #fff;
-    	font-size: 1.6em;
-    	padding-top: 10px;
+    	font-size: 1.2em;
+    	padding-top: 14px;
     	float: left;
     }
     p.pull {
