idk about styles....

--- a/kony/index.html
+++ b/kony/index.html
@@ -40,7 +40,9 @@
     	margin-top: 2.6em;
     	padding-left: 15px;
     	padding-right: 15px;
-        font-size: 2.3em;
+      font-size: 2.3em;
+      font-weight: bolder;
+      line-height: 1.2em;
     }
     h4 {
         font-family: "Sintony", sans-serif;
