--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -25,9 +25,9 @@
   }
   p {
   	font-family: 'Gentium Basic', serif;
-  	padding-left: 25px;
-  	padding-right: 25px;
-    font-size: 1.3em;
+  	padding-left: 20px;
+  	padding-right: 20px;
+    font-size: 1em;
   }
 
   img {
@@ -94,10 +94,10 @@
       </div>
     </div>
   <div class="chunk one" style="z-index: 150;">
-	 <img src="images/cover.jpg"></img>
+	 <img src="assets/00-title.png"></img>
   </div>
   <div class="chunk two" style="z-index: 140;">
-    <img src="images/map.jpg"></img>
+    <img src="assets/01-prologue.png"></img>
     <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
@@ -105,7 +105,8 @@
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk three" style="z-index: 130;">
-    <img src="images/kids.jpg"></img>
+    <img src="assets/02.png"></img>
+    <p style ="border-top: 1px solid #ccc; padding-top: 20px;">
     <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
@@ -113,15 +114,15 @@
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk four" style="z-index: 120;">
-    <img src="images/video.jpg"></img>
-    <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
+    <img src="assets/03.png"></img>
+    In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
     <p>These dedicated few are fishermen, mechanics, shopkeepers, beekeepers, town officials, retirees and, in many cases, several of these things. The quiet and simplicity of island life keeps them here.</p>
     <p>But the trials and isolation of island winters can wear on anyone, and the struggle to keep year-round island communities alive persists.</p>
   </div>
   <div class="chunk five" style="z-index: 110;">
-    <img src="images/movingoff.jpg"></img>
+    <img src="assets/04.png"></img>
     <p>Billy Barter, 76, was born on this island and he plans to die here.He and his wife, Bernadine, are affectionately referred to as the king and queen of Isle au Haut. They shake their heads at the titles and say, “not really,” but the label persists.</p>
     <p>The Barters have a long line of ancestry on the island. Pelatiah Barter settled on Isle au Haut around 1792 and was among the residents who petitioned the government of Massachusetts to hand ownership of the island over to the settlers in the early 1800s. </p>
     <p>More than two centuries later, Billy Barter is the patriarch of four generations of islanders. Most Barters are fishermen, and even the youngest, 13-year-old Michael, helps out. Billy Barter still fishes 330 lobster traps alongside his son and doesn’t plan to retire. He said the lobstering over the past 15 years has been the best he has seen around the island.</p>
@@ -140,7 +141,7 @@
     <p>“I don’t know if they’re going to stick around after I’m gone,” he said. </p>
   </div>
    <div class="chunk six" style="z-index: 100;">
-    <img src="images/map.jpg"></img>
+    <img src="assets/05.png"></img>
     <p>Dianne Bowen is leaving Isle au Haut after spending the past 25 years here and raising a son on the island.</p>
 
     <p>She works at Black Dinah Chocolatiers, an 8-year-old business named after the peak it sits at the foot of. It’s one of the island’s largest employers, with one full-time and three part-time workers.  </p>
@@ -171,7 +172,7 @@
     <p>As far as her fellow islanders: “I’m going to miss them — well, most.”</p>
   </div>
    <div class="chunk seven" style="z-index: 90;">
-    <img src="images/kids.jpg"></img>
+    <img src="assets/06.png"></img>
     <p>Island life can be trying on relationships. Here you are, on a small patch of land surrounded by water and by the same small group of people for the coldest, gloomiest months of the year.</p>
 
     <p>By the time March rolls around, people can be on edge.</p>
@@ -192,7 +193,7 @@
   </div>
 
     <div class="chunk eight" style="z-index: 80;">
-    <img src="images/movingoff.jpg"></img>
+    <img src="assets/07.png"></img>
     <p>The only way off for most residents is the 40-minute ride to Stonington on the mail boat, which only leaves twice per day, except for Sunday when there is no mail. The only other way to get to and from the mainland is to have your own boat or a willing friend with one.</p>
 
     <p>Garrett Aldrich (left), captain and manager of The Mink, and deckhand Pat Haskell take a trip to Isle au Haut from Stonington. The Mink makes trips to the island twice daily.</p>
@@ -208,7 +209,7 @@
   </div>
 
   <div class="chunk nine" style="z-index: 70;">
-    <img src="images/map.jpg"></img>
+    <img src="assets/08.png"></img>
     <p>To make a living on an island, you need to be flexible. Many residents make the bulk of their livelihood on the water, plucking fish, lobster and other sea life from the bay.</p>
 
     <p>Ed White is one of the island’s go-to mechanics and handles the inevitable breakdowns in its aging fleet of vehicles. He also does construction work for residents. He says he lived on a sailboat in the harbor for years — until the boat sank — and then moved into a house on the mainland. He spends a lot of his time in the library searching for obscure books, and residents say he’s probably one of the more well-read year-rounders.</p>
@@ -225,7 +226,7 @@
   </div>
 
   <div class="chunk ten" style="z-index: 60;">
-    <img src="sixmiles-pullquote-2.jpg"></img>
+    <img src="assets/09.png"></img>
      <p>The dwindling population, especially of children, on the island is a concern for those who want to see Isle au Haut — or any island community — survive.</p>
 
     <p>In an effort to draw new families, the Isle au Haut Community Development Corp. recently built a pair of low-rent housing units in town. Early in February, the corporation approved a housing application from a family of six — two parents with four children (a girl and three boys) and another on the way.</p>
@@ -242,13 +243,16 @@
 
     <p>“The grass isn’t greener on the mainland,” Shaffer said.</p>
   </div>
+    <div class="chunk eleven" style="z-index: 50;">
+    <img src="assets/10-credits.png"></img>
+  </div>
 
   <script type="text/javascript">
     var width = $( window ).width();
     var height = $( document ).height();
     $('.chunk').css("width", width + 'px');
     $('.chunk').css("height", height + 'px');
-    var chunks = ["one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten"];
+    var chunks = ["one", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "eleven"];
     $('.chunk').on("swiperight", function(){
       console.log('SWIPEright!!');
       theclass = $(this).attr('class').split(" ")[1];
