--- a/intropage/index.html
+++ b/intropage/index.html
@@ -23,6 +23,15 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+      .lead {
+        font-size: 16px;
+        margin-bottom: 50px;
+      }
+      h1 {
+        font-size: 50px;
+      }
+    </style>
   </head>
 
   <body>
@@ -37,11 +46,10 @@
             <span class="icon-bar"></span>
           </button>
 
-          <a class="navbar-brand" href="index.html">Skim</a>
+          <a class="navbar-brand" href="index.html">SKIM</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">About</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="index.html/#"></a></li>
           </ul>
@@ -53,21 +61,21 @@
 
       <div class="starter-template">
         <img src="icon.png" width="120px" />
-        <h1>Skim</h1>
+        <h1>SKIM</h1>
         <p class="lead">Is the story too long? Skim it!</p>
        
         <p>The project is an exploration of long-form stories on smartphones.</br>
         Click the image to explore it on your phone. | @ #SNDMakes March 21-23, 2014</p>
 
 
-		<div id="team">
+		<div>
         <h2>#1 "summary card"</h2>   
           <a href="http://kklai.github.io/skim/six-miles-out"><img src="1.png" width="600px" /></a>
 
         <h2>#2 "anchor"</h2>  
           <a href="http://kklai.github.io/skim/kony"><img src="2.png" width="600px" /></a>
 
-        <h2>Team Blue</h2>
+        <h2 id="team">Team Blue</h2>
         <p><a href="http://sndmakes.hackdash.org/projects/532c7ec90d7b828f0e000002">HackDash</a> | <a href="https://github.com/kklai/skim">Github</a></p>
         <ul>
           <li><a href="https://twitter.com/aschweig">Adam Schweigert</a></li>
