--- a/six-miles-out/index.html
+++ b/six-miles-out/index.html
@@ -115,7 +115,7 @@
   </div>
   <div class="chunk four" style="z-index: 120;">
     <img src="assets/03.png"></img>
-    In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
+    <p>In the dregs of winter, 6 miles can seem so much farther.  About 30 people tough out winters on Isle au Haut, a small island off the Maine coast in Penobscot Bay.</p>
     <p>In the summer, this outpost of Acadia National Park is bustling as hundreds of people from across the country come to enjoy the warm weather, sea breeze, beaches, trails and slow pace of life.</p>
     <p>When snow and ice become a threat, most of the island’s homes and camps are abandoned. Quiet sets in, and only the year-rounders remain.</p>
     <p>These dedicated few are fishermen, mechanics, shopkeepers, beekeepers, town officials, retirees and, in many cases, several of these things. The quiet and simplicity of island life keeps them here.</p>
