--- a/intropage/index.html
+++ b/intropage/index.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" href="icon.png">
 
-    <title>Team Blue-Skim</title>
+    <title>Skim</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
